# bachelorarbeit

./: .gitignore  Latexvorlage_BA_Arbeit_einseitig.tex  Muster-Deckblatt-Hausarbeit-2.docx  README.adoc  Steps & Notes.gdoc  Uncertainty Research.gdoc
code/: Dockerfile  requirements.txt
code/src/: Prediction_Models.py
heiderlab/: Example.tex
literature/: links.txt
models/: Prediction_Models.ipynb  Prediction_Models.py  riceClassifier.py  wasteClassifier.py
models/thesis/: ba.tex
probailix/: .gitignore  Dockerfile  Makefile  README.adoc  pyproject.toml  requirements.txt
probailix/data/: readme.adoc
probailix/docs/: mkdocs.yml
probailix/docs/docs/: index.md
probailix/src/: Prediction_Models.ipynb  riceClassifier.py  wasteClassifier.py
probailix/src/apis/: server.py
uqX/: Makefile  README.md  pyproject.toml  requirements.txt
uqX/models/: trained_bnn_model.pth  uqXmcdo_model.pth
uqX/notebooks/: uqXUsage.ipynb  uqX_Aleatoric_Usage.ipynb  uqX_epistemic_Usage.ipynb
uqX/uqX/: __init__.py  dataset.py  features.py  plots.py
uqX/uqX/modeling/: BayesianConverter.py  uqXAleatoricModelling.py  uqXModel.py  uqXmcdoModel.py
uqX_master/uqX_master/modeling/: uqXBnnModel.py  uqXEpistemicModelling.py
